[gd_scene load_steps=3 format=3 uid="uid://cslbjg4ebqu54"]

[ext_resource type="Script" uid="uid://cwuup6ulaej4e" path="res://scripts/ui/world_map_select.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://1qibfu3gvxev" path="res://map1.png" id="2_ox7c3"]

[node name="WorldMapSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MapContainer" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2

[node name="MapBackground" type="TextureRect" parent="ScrollContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ox7c3")
expand_mode = 1
stretch_mode = 5

[node name="PathsCanvas" type="Control" parent="ScrollContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LevelNodesContainer" type="Control" parent="ScrollContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="ProfileLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Profile: Player"
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Progress: 0/10 levels | Stars: 0/30"
horizontal_alignment = 2
vertical_alignment = 1
